src/test/resources/success/basic/Problem4.scala
package success.basic

import forcedtodo.todo

class Problem4 {
  @todo("Value", until = "2050-08-04")
  val x = 5
}
