src/test/resources/fail/mixed2/Problem.scala
package fail.mixed2

import forcedtodo.todo

class Problem {
  class Problem2 {
    def foo() = {
      @todo("ye", "1990-01-01") val x = 123
    }
  }
}



